--- a/IMS.App/IMS.App.csproj
+++ b/IMS.App/IMS.App.csproj
@@ -48,6 +48,7 @@
     <Compile Include="IMS\Entity\InventoryProducts\BarCodes\BarCodes.cs" />
     <Compile Include="IMS\Entity\InventoryProducts\Categories\Brands.cs" />
     <Compile Include="IMS\Entity\InventoryProducts\Categories\MainCategories.cs" />
+    <Compile Include="IMS\Entity\InventoryProducts\Categories\Rack.cs" />
     <Compile Include="IMS\Entity\InventoryProducts\Categories\SubCategories.cs" />
     <Compile Include="IMS\Entity\InventoryProducts\Categories\Unit.cs" />
     <Compile Include="IMS\Entity\InventoryProducts\Categories\Vendors.cs" />
@@ -59,6 +60,7 @@
     <Compile Include="IMS\Repository\InventoryProducts\Categories\BrandsRepo.cs" />
     <Compile Include="IMS\Repository\InventoryProducts\Categories\MainCategoriesRepo.cs" />
     <Compile Include="IMS\Repository\InventoryProducts\Categories\MasterCategoriesRepo.cs" />
+    <Compile Include="IMS\Repository\InventoryProducts\Categories\RackRepo.cs" />
     <Compile Include="IMS\Repository\InventoryProducts\Categories\SubCategoriesReop.cs" />
     <Compile Include="IMS\Repository\InventoryProducts\Categories\UnitRepo.cs" />
     <Compile Include="IMS\Repository\InventoryProducts\Categories\VendorsRepo.cs" />
@@ -81,6 +83,7 @@
     <Compile Include="UserInterface\Category\MainCategory.Designer.cs">
       <DependentUpon>MainCategory.cs</DependentUpon>
     </Compile>
+    <Compile Include="UserInterface\Category\RackNumberFormClass.cs" />
     <Compile Include="UserInterface\Category\UnitFormClass.cs" />
     <Compile Include="UserInterface\frmCustomer_ditails.cs">
       <SubType>Form</SubType>
