--- a/IMS.App/IMS.App.csproj
+++ b/IMS.App/IMS.App.csproj
@@ -92,6 +92,12 @@
     <Compile Include="UserInterface\frmgrn.Designer.cs">
       <DependentUpon>frmgrn.cs</DependentUpon>
     </Compile>
+    <Compile Include="UserInterface\frmlocationtransfers.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UserInterface\frmlocationtransfers.Designer.cs">
+      <DependentUpon>frmlocationtransfers.cs</DependentUpon>
+    </Compile>
     <Compile Include="UserInterface\frmLogin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -146,6 +152,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UserInterface\frmgrn.resx">
       <DependentUpon>frmgrn.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UserInterface\frmlocationtransfers.resx">
+      <DependentUpon>frmlocationtransfers.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UserInterface\frmLogin.resx">
       <DependentUpon>frmLogin.cs</DependentUpon>
