--- a/IMS.App/app.config
+++ b/IMS.App/app.config
@@ -4,7 +4,7 @@
   </configSections>
   <connectionStrings>
     <add name="IMS.App.Properties.Settings.POS_ETLConnectionString"
-                connectionString="Data Source=.;Initial Catalog=POS_ETL;Integrated Security=True"
-                providerName="System.Data.SqlClient" />
+        connectionString="Data Source=DESKTOP-0NA3O6D\SQLEXPRESS;Initial Catalog=POS_ETL;User ID=sa;Password=Labadmin@atikg"
+        providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
